WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283170
REGRESSION(
286528@main
): Triggers asserts in Mock audio source
https://bugs.webkit.org/show_bug.cgi?id=283170
Summary
REGRESSION(286528@main): Triggers asserts in Mock audio source
Philippe Normand
Reported
2024-11-15 05:30:43 PST
Thread 1 (Thread 0x7fbd7d7fa6c0 (LWP 299839)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:365 #1 0x00007fd2150c28d3 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Assertions.h:913 #2 0x00007fd21c4927ee in WebCore::MockRealtimeAudioSourceGStreamer::render(WTF::Seconds) (this=0x7fd1f26cba40, delta=...) at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/MockRealtimeAudioSourceGStreamer.cpp:159 #3 0x00007fd21c4af99a in operator()() const (__closure=0x7fd1f27c2728) at /app/webkit/Source/WebCore/platform/mock/MockRealtimeAudioSource.cpp:183 #4 0x00007fd21c4d0ff4 in WTF::Detail::CallableWrapper<WebCore::MockRealtimeAudioSource::tick()::<lambda()>, void>::call(void) (this=0x7fd1f27c2720) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:53 #5 0x00007fd2063ff89b in WTF::Function<void ()>::operator()() const (this=0x7fd1f27c2790) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:82 #6 0x00007fd207e6b510 in operator()() const (__closure=0x7fd1f27c2788) at /app/webkit/Source/WTF/wtf/generic/WorkQueueGeneric.cpp:68 #7 0x00007fd207e6d6d0 in WTF::Detail::CallableWrapper<WTF::WorkQueueBase::dispatch(WTF::Function<void()>&&)::<lambda()>, void>::call(void) (this=0x7fd1f27c2780) at /app/webkit/Source/WTF/wtf/Function.h:53 #8 0x00007fd2063ff89b in WTF::Function<void ()>::operator()() const (this=0x7fbd7d7f9840) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:82 #9 0x00007fd207cf0b9b in WTF::RunLoop::performWork() (this=0x7fd1f255c600) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #10 0x00007fd207e70656 in operator()(gpointer) const (__closure=0x0, userData=0x7fd1f255c600) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #11 0x00007fd207e7067a in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #12 0x00007fd207e705b1 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x7fbd58001090, callback=0x7fd207e7065d <_FUN(gpointer)>, userData=0x7fd1f255c600) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #13 0x00007fd207e705ff in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #14 0x00007fd200717d36 in g_main_dispatch (context=0x7fbd58000b70) at ../glib/gmain.c:3460 #15 g_main_context_dispatch (context=0x7fbd58000b70) at ../glib/gmain.c:4200 #16 0x00007fd2007752b8 in g_main_context_iterate.isra.0 (context=0x7fbd58000b70, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #17 0x00007fd2007173ff in g_main_loop_run (loop=0x7fbd58001000) at ../glib/gmain.c:4479 #18 0x00007fd207e70cda in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #19 0x00007fd207cf0915 in operator()() const (__closure=0x7fd1f27e3d88) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:114 #20 0x00007fd207cf4320 in WTF::Detail::CallableWrapper<WTF::RunLoop::create(WTF::ASCIILiteral, WTF::ThreadType, WTF::Thread::QOS)::<lambda()>, void>::call(void) (this=0x7fd1f27e3d80) at /app/webkit/Source/WTF/wtf/Function.h:53 #21 0x00007fd2063ff89b in WTF::Function<void ()>::operator()() const (this=0x7fbd7d7f9b40) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:82 #22 0x00007fd207db2c35 in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) (newThreadContext=0x7fd1f2757f60) at /app/webkit/Source/WTF/wtf/Threading.cpp:265 #23 0x00007fd207e7f7d9 in WTF::wtfThreadEntryPoint(void*) (context=0x7fd1f2757f60) at /app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:241 #24 0x00007fd2001b8e39 in start_thread (arg=<optimized out>) at pthread_create.c:444 #25 0x00007fd2002408c4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100 STDERR: ASSERTION FAILED: m_streamFormat
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-11-15 05:46:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36694
EWS
Comment 2
2024-11-18 03:29:12 PST
Committed
286718@main
(aaf43cf52732): <
https://commits.webkit.org/286718@main
> Reviewed commits have been landed. Closing PR #36694 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-18 03:30:15 PST
<
rdar://problem/140113098
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug