Cherry-pick 286718@main (aaf43cf52732). https://bugs.webkit.org/show_bug.cgi?id=283170

REGRESSION(286528@main): Triggers asserts in Mock audio source
    https://bugs.webkit.org/show_bug.cgi?id=283170

    Reviewed by Xabier Rodriguez-Calvar.

    * Source/WebCore/platform/mediastream/gstreamer/MockRealtimeAudioSourceGStreamer.cpp:
    (WebCore::MockRealtimeAudioSourceGStreamer::render): Make sure the stream format is set before
    attempting to access it. Also simplify the loop exit condition.

    Canonical link: https://commits.webkit.org/286718@main

Canonical link: https://commits.webkit.org/282416.309@webkitglib/2.46